--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-syntax-highlighter": "^16.1.0",
     "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
